Updated Z calculation text. Added long-chain TDDFT graphs and removed non-PBE0 graphs.

--- a/main.tex
+++ b/main.tex
@@ -167,9 +167,9 @@ electron density are reproduced by a mono-electronic operator.\cite{carissan_wha
 However, while effective core potentials and model potentials intend to 
 reproduce atomic properties,
 effective group potentials aim at mimicking the effect of atoms involved in one or more chemical
-bonds. The cyclopentadienyl group was, for instance, successfully extracted.
+bonds. The cyclopentadienyl group was, for instance, successfully extracted. [REF]
 In this example, carbon atoms are hybridized and the core/valence distinction is not 
-strictly defined.
+strictly defined. [TRANSITION NEEDED HERE]
 Let us follow Huzinaga in his enlightening work.\cite{huzinaga_effective_1991}
 In order to extract a meaningful potential, he states that for electron/electron interactions, 
 "the most important effect is that the exclusion principle prevents active electrons
@@ -254,7 +254,7 @@ It is the smallest system containing one and only one sp$^2$ hybridized carbon a
 This choice allows us to isolate the different electrostatic interactions
 to build a physically meaningful model.
 In order to fulfil the criteria specified in Equation (\ref{eq:atomicHamiltonian}),
-we make use of two kinds of Gaussian pseudo-potentials \cite{me_structure_theory}, of \(s\) and \(p\) shapes. As we want to avoid modifying the quantum chemistry software itself, the pseudo-potentials have a semi-local form and we choose a value of \(n = 1\) to preserve the \(1/r\) behaviour as in Huzinanaga's work. As will be discussed in the following sections,
+we make use of two kinds of Gaussian pseudo-potentials \cite{me_structure_theory}, of \(s\) and \(p\) shapes. As we want to avoid modifying the quantum chemistry software itself, the pseudo-potentials have a semi-local form and we choose a value of \(n = 1\) to preserve the \(1/r\) behaviour as in Huzinanaga's work [MORE DETAIL, N IS NOT DEFINED]. As will be discussed in the following sections,
 the \(p\) pseudo-potential allows to reproduce atomic properties, when the
 \(s\)-potentials mimic electrostatic electron pair repulsion. The pseudo-potentials are monoelectronic operators, thus they shall not be able to reproduce fully bielectronic interactions. Knowing this, we adjust the parameters of the \(s\)-potentials for the pseudo-system to have a wavefunction in which properties are as close as possible to those of the reference system, such as spatial extent, energy and excitation energies.
 
@@ -281,10 +281,10 @@ In this article, we fix \(c = 0.25\;a.u.\).
 \label{section:potential_derivation}
 
 It is possible to obtain the potential parameters entirely by empirical means. However, we can make a more informed guess at some starting parameters from which to optimise. Clearly the assumption that \(Z = 1\) is unrealistic. Slater's Rules\cite{slatersrules} suggest that, with the screening effect, the \(p_{z}\) electron of a carbon atom should experience a charge of \(Z = 2.4\). To mimic the effect of an electron-screened nucleus, we can use a \(p_{z}\) pseudo-potential. In order to make an educated guess of the parameters of this new potential, we need to find an expression for \(Z_{eff}(\langle r \rangle)\); \(Z_{eff}\) being the total nuclear attraction the electron would feel in the real CH\(^{\bullet}_{3}\) system, taking into account the screening effect of the core electrons that would be present in an all-electron model; and \( \langle r \rangle \) being the expected distance of the electron from the nucleus.
-%%	The generic forms of Gaussian Type Orbitals for \(s\) and \(p_{z}\) are [REF]
-%% \begin{equation}
-%% \psi_{s} = re^{-\alpha r^{2}},\qquad	\psi_{p_{z}} = r \cos \theta e^{-\alpha r^{2}}
-%% \end{equation}
+%	The generic forms of Gaussian Type Orbitals for \(s\) and \(p_{z}\) are [REF]
+%\begin{equation}
+%\psi_{s} = re^{-\alpha r^{2}},\qquad	\psi_{p_{z}} = r \cos \theta e^{-\alpha r^{2}}
+%\end{equation}
 
 The analytical form of the \(p_{z}\) orbital for a hydrogen-like atom is\cite{nyu_h_solutions}
 \begin{equation}
@@ -296,13 +296,21 @@ and from this we obtain
 \langle \phi_{210} | r | \phi_{210} \rangle = \frac{5a_{0}}{Z_{eff}}
 \end{equation}
 Next, we need to find a value for \( \langle r \rangle \). We can do this by calculating
+
 \begin{equation}
-\langle r \rangle = \lambda B \lambda^{T}
+\langle r \rangle = \langle \psi_{p_{z}} | r | \psi_{p_{z}} \rangle
 \label{equation:exp_r}
 \end{equation}
-where \(\lambda\) are the Symmetrised Atomic Orbital Shells taken from the molecular orbital files of a reference Turbomole calculation of a CH\(^{\bullet}_{3}\) radical, and B is the matrix of \(\langle \psi_{p_{z}} | r | \psi_{p_{z}} \rangle\) values, appropriately normalised and contracted according to the basis set used (in this case, def-SV(P) \cite{defsvp}).
 
-From Equation \ref{equation:exp_r}, we have \( \langle r \rangle \approx 1.8\;a.u.\) and therefore we can see from Equation \ref{equation:PsirPsi} that \(Z_{eff} \approx 3.6\). Even if we shall use the semi-local pseudopotential definition for the calculations, for a quick evaluation of overlap effects between the basis set and the pseud-opotential, we assume a non-local pseudo-potential definition. We define:
+%%
+%% \begin{equation}
+%% \langle r \rangle = \lambda B \lambda^{T}
+%% \label{equation:exp_r}
+%% \end{equation}
+%% where \(\lambda\) are the Symmetrised Atomic Orbital Shells taken from the molecular orbital files of a reference calculation of a CH\(^{\bullet}_{3}\) %% radical, and B is the matrix of \(\langle \psi_{p_{z}} | r | \psi_{p_{z}} \rangle\) values, appropriately normalised and contracted according to the basis %% set used (in this case, def-SV(P) \cite{defsvp}).
+%%
+
+ where \(\psi_{p_{z}}\) are the \(p\) orbitals extracted from a reference calculation of CH\(_{3}\). From Equation \ref{equation:exp_r}, we have \( \langle r \rangle \approx 1.8\;a.u.\) and therefore we can see from Equation \ref{equation:PsirPsi} that \(Z_{eff} \approx 3.6\). Even if we shall use the semi-local pseudopotential definition for the calculations, for a quick evaluation of overlap effects between the basis set and the pseudo-potential, we assume a non-local pseudo-potential definition. We define:
 \begin{equation}
 S = \langle \phi_{p_{z}} | \chi \rangle
 \end{equation}
@@ -530,24 +538,24 @@ the potentials optimized in this article are fully defined by the position
 of the pseudo atom: no potentials are placed at the center of any bond.
 
 \begin{figure}[h]
-\includegraphics[width=8cm]{hf_homo}
+% \includegraphics[width=8cm]{hf_homo}
 \includegraphics[width=8cm]{pbe0_homo}
-\includegraphics[width=8cm]{hf_ionisation}
+% \includegraphics[width=8cm]{hf_ionisation}
 \includegraphics[width=8cm]{pbe0_ionisation}
-\includegraphics[width=8cm]{hf_excitation}
+% \includegraphics[width=8cm]{hf_excitation}
 \includegraphics[width=8cm]{pbe0_excitation}
-\includegraphics[width=8cm]{pbe_homo}
-\includegraphics[width=8cm]{tpss_homo}
-\end{figure}
-\begin{figure}[h]
-\includegraphics[width=8cm]{pbe_ionisation}
-\includegraphics[width=8cm]{tpss_ionisation}
-\includegraphics[width=8cm]{pbe_excitation}
-\includegraphics[width=8cm]{tpss_excitation}
-\includegraphics[width=8cm]{tpssh_homo}
-\includegraphics[width=8cm]{tpssh_ionisation}
-\includegraphics[width=8cm]{tpssh_excitation}
-\caption{Comparison on reference and pseudo-system energies across a range of chain alkenes and computational methods.}
+%\includegraphics[width=8cm]{pbe_homo}
+% \includegraphics[width=8cm]{tpss_homo}
+%\end{figure}
+%\begin{figure}[h]
+%\includegraphics[width=8cm]{pbe_ionisation}
+%\includegraphics[width=8cm]{tpss_ionisation}
+%\includegraphics[width=8cm]{pbe_excitation}
+%\includegraphics[width=8cm]{tpss_excitation}
+%\includegraphics[width=8cm]{tpssh_homo}
+%\includegraphics[width=8cm]{tpssh_ionisation}
+%\includegraphics[width=8cm]{tpssh_excitation}
+\caption{DFT (PBE0) comparison of reference and pseudo-system energies across a range of chain alkenes and computational methods.}
 \label{fig:alkenes_hf_dft}
 \end{figure}
 \begin{figure}[h]
@@ -595,9 +603,9 @@ Mean Singlet HOMO error (\%) & 3.4  & 9.3  & 13.4 & 17.1 & 14.7 \\
 \hline\hline
 Calculation Type & HF & PBE0 & PBE & TPSS & TPSSH \\
 \hline
-Mean \(\pi - \pi*\) Excitation error (\%) & \(\leq\)  &\(\leq\) & \(\leq\)  & \(\leq\)  & \(\leq\)  \\
-Mean Ionisation error (\%) & \(\leq\)  & \(\leq\)  & \(\leq\)  & \(\leq\)  & \(\leq\)  \\
-Mean Singlet HOMO error (\%) & \(\leq\)  & \(\leq\)  & \(\leq\)  & \(\leq\)  & \(\leq\) \\
+Mean \(\pi - \pi*\) Excitation error (\%) & 55.3 & 85.8 & 83.4 & 239.8 & 320.2  \\
+Mean Ionisation error (\%) & 25.1 & 6.7 & 9.4 & 10.3 & 11.6 \\
+Mean Singlet HOMO error (\%) & 1.8 & 7.3 & 11.3 & 16.7 & 13.6 \\
 \hline
 \end{tabular}
 \label{table:long_alkene_errors}
@@ -606,22 +614,31 @@ Mean Singlet HOMO error (\%) & \(\leq\)  & \(\leq\)  & \(\leq\)  & \(\leq\)  & \
 Table \ref{table:long_alkene_errors} gives the same energy details for longer chain alkenes. The pattern of decreasing ionisation and excitation energies with increasing HOMO energy is still followed, with the absolute error remaining consistent. However, with chains of this length the excitation energies begin to become smaller than the systematic error between the pseudo-system and reference system results. It is apparent that the pseudo-potentials will need to be more accurate if they are to be useful for studying these molecules.
 
 \begin{figure}[h]
-\includegraphics[width=8cm]{ring_hf_excitation}
-\includegraphics[width=8cm]{ring_hf_ionisation}
-\includegraphics[width=8cm]{ring_hf_homo}
+%\includegraphics[width=8cm]{ring_hf_excitation}
+%\includegraphics[width=8cm]{ring_hf_ionisation}
+%\includegraphics[width=8cm]{ring_hf_homo}
 \includegraphics[width=8cm]{ring_pbe0_excitation}
 \includegraphics[width=8cm]{ring_pbe0_ionisation}
 \includegraphics[width=8cm]{ring_pbe0_homo}
-\includegraphics[width=8cm]{ring_pbe_excitation}
-\includegraphics[width=8cm]{ring_pbe_ionisation}
-\includegraphics[width=8cm]{ring_pbe_homo}
-\includegraphics[width=8cm]{ring_tpss_ionisation}
-\includegraphics[width=8cm]{ring_tpss_excitation}
-\includegraphics[width=8cm]{ring_tpss_homo}
-\includegraphics[width=8cm]{ring_tpssh_excitation}
-\includegraphics[width=8cm]{ring_tpssh_ionisation}
-\includegraphics[width=8cm]{ring_tpssh_homo}
-\caption{Comparison on reference and pseudo-system energies across a range of ring molecules and computational methods.}
+%\includegraphics[width=8cm]{ring_pbe_excitation}
+%\includegraphics[width=8cm]{ring_pbe_ionisation}
+%\includegraphics[width=8cm]{ring_pbe_homo}
+%\includegraphics[width=8cm]{ring_tpss_ionisation}
+%\includegraphics[width=8cm]{ring_tpss_excitation}
+%\includegraphics[width=8cm]{ring_tpss_homo}
+%\includegraphics[width=8cm]{ring_tpssh_excitation}
+%\includegraphics[width=8cm]{ring_tpssh_ionisation}
+%\includegraphics[width=8cm]{ring_tpssh_homo}
+\caption{DFT (PBE0) comparison of reference and pseudo-system energies across a range of ring molecules.}
+\label{fig:rings_graphs}
+\end{figure}
+
+\begin{figure}[h]
+\includegraphics[width=8cm]{pbe0_excitation_long}
+\includegraphics[width=8cm]{pbe0_ionisation_long}
+\includegraphics[width=8cm]{pbe0_homo_long}
+\includegraphics[width=8cm]{tddft_excitation_long}
+\caption{DFT (PBE0) comparison of reference and pseudo-system energies across a range of long chain alkenes (C\(_{20}\)-C\(_{100}\)).}
 \label{fig:rings_graphs}
 \end{figure}
 
@@ -714,6 +731,22 @@ quick evaluation of overlap effects between the basis set and the pseudopotentia
 - maybe all the potential sets used could be consolidated into one table, easy to refer to?
 
 - some pictures of pseudomolecules
+
+- Reduce number of lines in tables
+
+- Review captions (more detail)
+
+- update d and c diagram DONE
+
+- Finish long chain calc graphs 
+
+- line 170 reference needed
+
+- 257: n not defined more detail
+
+- rewrite lambda B lambda bit
+
+- some comments on the increasing error with length of chain. blame alternating bond legth, compare with rings of equal bond length. 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% The same is true for Supporting Information, which should use the
