correction in the bibliography file

--- a/biblio_pseudo_alex.bib
+++ b/biblio_pseudo_alex.bib
@@ -106,7 +106,7 @@
 @book{TURBOMOLE,
    title = "Turbomole 7.1",
    publisher = {{University of Karlsruhe, Germany}},
-   author = {Ahlrichs, R. and B"ar, M. and Baron, H.-P. and Bauerschmitt, R. and B"ocker, S. and Ehrig, M. and Eichkorn, K. and Elliott, S. and Furche, F. and Haase, F. and H"aser, M. and Horn, H. and Huber, C. and Huniar, U. and Kattannek, M. and K"olmel, C. and Kollwitz, M. and May, K. and Ochsenfeld, C. and "Ohm, H. and Sch"afer, A. and Schneider, U. and Treutler, O. and von Arnim, M. and Weigend, F. and Weis, P. and Weiss, H.},
+   author = {Ahlrichs, R. and B{\"a}r, M. and Baron, H.-P. and Bauerschmitt, R. and B{\"o}cker, S. and Ehrig, M. and Eichkorn, K. and Elliott, S. and Furche, F. and Haase, F. and H{\"a}ser, M. and Horn, H. and Huber, C. and Huniar, U. and Kattannek, M. and K{\"o}lmel, C. and Kollwitz, M. and May, K. and Ochsenfeld, C. and {\"O}hm, H. and Sch{\"a}fer, A. and Schneider, U. and Treutler, O. and von Arnim, M. and Weigend, F. and Weis, P. and Weiss, H.},
    year = {2000},
    groups = {biblio\_pseudo\_alex}
 }
@@ -114,7 +114,7 @@
 @book{me_structure_theory,
    title = "Molecular Electronic-Structure Theory",
    publisher = {{John Wiley and Sons Ltd}},
-   author = {Helgaker, Trygve and J\o rgensen, Poul and Olsen, Jeppe},
+   author = {Helgaker, Trygve and J{\o}rgensen, Poul and Olsen, Jeppe},
    year = {2002},
    groups = {biblio\_pseudo\_alex}
 }
@@ -191,7 +191,7 @@
  volume = {97},
  number = {2571},
  journal = {Journal of Chemical Physics},
- author = {A. Schäfer and H. Horn and R. Ahlrichs; J.},
+ author = {Sch{\"a}fer, A. and Horn, H. and Ahlrichs, R.},
  year = {1992},
  groups = {biblio\_pseudo\_alex}
 }
